--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ src/managers/componentManager.cpp
 src/systems/textSystem.cpp
 src/systems/physicsSystem.cpp
 src/systems/renderSystem.cpp
+src/systems/inputSystem.cpp
 
 src/ui/UIComponent.cpp
 src/ui/UIScreen.cpp
@@ -90,6 +91,7 @@ include/managers/componentManager.hpp
 include/systems/textSystem.hpp
 include/systems/physicsSystem.hpp
 include/systems/renderSystem.hpp
+include/systems/inputSystem.hpp
 
 include/ui/UIComponent.hpp
 include/ui/UIScreen.hpp
