Start of saving
Former-commit-id: b8ebf8c1ff566a9b371501fc82ef5914251f307a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,8 @@ src/systems/physicsSystem.cpp
 src/systems/renderSystem.cpp
 src/systems/inputSystem.cpp
 
+src/scenes/level.cpp
+
 # Headers
 include/game.hpp
 include/utils.hpp
@@ -82,6 +84,8 @@ include/systems/textSystem.hpp
 include/systems/physicsSystem.hpp
 include/systems/renderSystem.hpp
 include/systems/inputSystem.hpp
+
+include/scenes/level.hpp
 
 # External
 src/third_party/stb_image.c
