--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ src/utils.cpp
 
 src/components/inventory.cpp
 src/components/playerInventory.cpp
+src/components/crafting.cpp
 
 src/opengl/mesh.cpp
 src/opengl/shader.cpp
@@ -80,6 +81,7 @@ include/registers.hpp
 
 include/components/inventory.hpp
 include/components/playerInventory.hpp
+include/components/crafting.hpp
 
 include/misc/sparse_set.hpp
 include/misc/sparse_set_view.hpp
