--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ src/utils.cpp
 src/components/inventory.cpp
 src/components/playerInventory.cpp
 src/components/crafting.cpp
+src/components/noise.cpp
 
 src/opengl/mesh.cpp
 src/opengl/shader.cpp
@@ -83,6 +84,7 @@ include/registers.hpp
 include/components/inventory.hpp
 include/components/playerInventory.hpp
 include/components/crafting.hpp
+include/components/noise.hpp
 
 include/misc/sparse_set.hpp
 include/misc/sparse_set_view.hpp
