--- a/cmake/index.html.in
+++ b/cmake/index.html.in
@@ -81,7 +81,11 @@ canvas.emscripten { border: 0px none; }
     <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" tabindex=-1></canvas>
 
     <script type='text/javascript'>
-      window.alert("Download native versions at https://github.com/cheyao/opengl/releases for better performance");
+      window.alert("Download native (Windows, MacOS, Linux, Android) versions at https://github.com/cheyao/opengl/releases for better performance");
+      if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+      } else {
+      };
+
       var statusElement = document.getElementById('status');
       var progressElement = document.getElementById('progress');
       var spinnerElement = document.getElementById('spinner');
